--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Cdemo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Cdemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,6 +12,21 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Z your theme here. -->
     </style>
+
+    <style name="button_flat_appearance">
+        <item name="neuButtonStartColor">#1d222e</item>
+        <item name="neuButtonEndColor">#1d222e</item>
+        <item name="neuButtonBorder1StartColor">#738B9A</item>
+        <item name="neuButtonBorder1EndColor">#738B9A</item>
+        <item name="neuButtonBorder2StartColor">#738B9A</item>
+        <item name="neuButtonBorder2EndColor">#738B9A</item>
+        <item name="neuButtonPressedDarkShadowColor">#1d222e</item>
+    </style>
+
+    <style name="RadioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
+        <item name="android:button">@drawable/radio</item>
+    </style>
+
 </resources>
